# Allen-Cahn-CUDA

./: CMakeLists.txt  README.md  main  main.cu
